--- a/System/Media/Theme/Default/style.css
+++ b/System/Media/Theme/Default/style.css
@@ -10,7 +10,7 @@ body
 {font: 62.5% "Lucida Grande", Verdana, Arial, sans-serif;}
 
 h1 a
-{display: block; height: 80px; width: 200px; background: url(images/logo_web.png); text-indent: -10000px;}
+{display: block; height: 80px; width: 200px; background: url(images/logo_web.png); text-indent: -10000px; float: left;}
 
 h2
 {font-size: 2.2em; font-family: Georgia; font-weight: normal;}
@@ -29,3 +29,15 @@ p
 
 #wrapper
 {width: 960px; margin: auto; padding: 10px 0;}
+
+#navigation
+{float: right;}
+
+#navigation li
+{display: inline;}
+
+#navigation li a
+{display: block; float: left; height: 80px; line-height: 80px; padding: 0 20px; margin-right: 5px; background: #666; color: #fff; text-decoration: none; font-size: 1.2em;}
+
+#navigation li a:hover
+{background: #999;}
