--- a/System/Media/Theme/Default/style.css
+++ b/System/Media/Theme/Default/style.css
@@ -7,7 +7,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
  * Basic
  */
 body
-{font: 62.5% "Lucida Grande", Verdana, Arial, sans-serif; background: #eee;}
+{font: 62.5% "Lucida Grande", Verdana, Arial, sans-serif;}
 
 h1 a
 {display: block; height: 80px; width: 200px; background: url(images/logo_web.png); text-indent: -10000px; float: left;}
@@ -18,29 +18,44 @@ h2
 p
 {font-size: 1.2em; line-height: 1.5; padding-top: 5px;}
 
+a
+{text-decoration: none; color: #0262a0;}
+
+a:hover
+{text-decoration: underline; color: #023d63;}
+
 /**
  * Layout
  */
 #header
-{height: 80px; background: #fff; border-bottom: 1px solid #ddd;}
+{height: 80px; background: #fff;}
 
 #header > div
-{width: 960px; margin: auto;}
+{width: 960px; height: 80px; margin: auto; position: relative;} 
 
 #wrapper
-{width: 960px; margin: auto; padding: 20px 0;}
+{width: 960px; margin: auto; padding: 15px 0;}
 
 #navigation
-{float: right;}
+{width: 100%; background: #e9e9e9; padding: 5px 0;}
 
-#navigation li
-{display: inline; display: block; float: left; height: 80px; line-height: 80px; padding: 0 10px;}
+#navigation ul
+{width: 960px; margin: auto; clear: both;}
 
-#navigation li a
-{background: #023d63; padding: 8px 10px; color: #fff; text-decoration: none; font-size: 1.2em;}
+#navigation ul li
+{display: inline;}
 
-#navigation li a:hover
-{background: #2578ad;}
+#navigation ul li a
+{display: block; float: left; padding: 5px 10px; font-size: 1.1em; margin-left: 5px;}
+
+#navigation ul li a:hover
+{background: #fff; -moz-border-radius: 5px; -webkit-border-radius: 5px; text-decoration: none;}
 
 #footer
-{border-top: 1px solid #ddd; padding: 10px; color: #666; font-size: 1.1em; text-align: center}
+{border-top: 1px solid #eee; width: 1000px; margin: auto; padding: 10px; color: #666; font-size: 1.1em; text-align: center}
+
+/**
+ * Classes
+ */
+.clear
+{clear: both;}
