--- a/System/Media/Theme/Default/style.css
+++ b/System/Media/Theme/Default/style.css
@@ -37,7 +37,7 @@ a:hover
 {width: 960px; margin: auto; padding: 15px 0;}
 
 #navigation
-{width: 100%; background: #e9e9e9; padding: 5px 0;}
+{width: 100%; background: #e9e9e9; padding: 3px 0; border: 1px solid #ddd; border-left: 0; border-right: 0;}
 
 #navigation ul
 {width: 960px; margin: auto; clear: both;}
@@ -46,10 +46,13 @@ a:hover
 {display: inline;}
 
 #navigation ul li a
-{display: block; float: left; padding: 5px 10px; font-size: 1.1em; margin-left: 5px;}
+{display: block; float: left; padding: 5px 10px; font-size: 1.1em; margin-left: 5px; border: 1px solid transparent; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
 
 #navigation ul li a:hover
-{background: #fff; -moz-border-radius: 5px; -webkit-border-radius: 5px; text-decoration: none;}
+{background: #fff; text-decoration: none; border: 1px solid #ddd;}
+
+#navigation ul .active a
+{font-weight: bold; border-color: #ddd; background: #eee;}
 
 #footer
 {border-top: 1px solid #eee; width: 1000px; margin: auto; padding: 10px; color: #666; font-size: 1.1em; text-align: center}
