--- a/System/Media/Theme/Default/style.css
+++ b/System/Media/Theme/Default/style.css
@@ -7,7 +7,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
  * Basic
  */
 body
-{font: 62.5% "Lucida Grande", Verdana, Arial, sans-serif;}
+{font: 62.5% "Lucida Grande", Verdana, Arial, sans-serif; background: #edf3f6 url(images/bg.png) top center no-repeat;}
 
 h1 a
 {display: block; height: 80px; width: 200px; background: url(images/logo_web.png); text-indent: -10000px; float: left;}
@@ -34,28 +34,52 @@ a:hover
 {width: 960px; height: 80px; margin: auto; position: relative;} 
 
 #wrapper
-{width: 960px; margin: auto; padding: 15px 0;}
+{background: url(images/wrapper_bg.png) top left repeat-x; padding-top: 40px;}
 
+#content_wrapper
+{width: 960px; margin: auto; background: #fff;}
+
+#content
+{padding: 10px;}
+
+/**
+ * Navigation
+ */
 #navigation
-{width: 100%; background: #e9e9e9; padding: 3px 0; border: 1px solid #ddd; border-left: 0; border-right: 0;}
-
-#navigation ul
-{width: 960px; margin: auto; clear: both;}
+{width: 760px; float: left;}
 
 #navigation ul li
-{display: inline;}
+{height: 80px; line-height: 80px; display: inline;}
 
 #navigation ul li a
-{display: block; float: left; padding: 5px 10px; font-size: 1.1em; margin-left: 5px; border: 1px solid transparent; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
+{font-size: 1.6em; font-family: Helvetica; font-weight: bold; padding: 5px 20px; border-right: 1px solid #ccc;}
 
-#navigation ul li a:hover
-{background: #fff; text-decoration: none; border: 1px solid #ddd;}
+#navigation ul li:last-child a
+{border: 0;}
 
 #navigation ul .active a
-{font-weight: bold; border-color: #ddd; background: #f4f4f4;}
+{color: #2c98e7;}
+
+#sub_navigation
+{width: 960px; margin: auto; background: #003260; padding: 3px 0; border-bottom: 1px solid #ddd; -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px;}
+
+#sub_navigation ul
+{width: 960px; margin: auto; clear: both;}
+
+#sub_navigation ul li
+{display: inline;}
+
+#sub_navigation ul li a
+{display: block; float: left; padding: 6px 10px; font-size: 1.1em; margin-left: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; color: #fff;}
+
+#sub_navigation ul li a:hover
+{background: #fff; text-decoration: none; color: #023d63;}
+
+#sub_navigation ul .active a
+{font-weight: bold; border-color: #ddd; background: #1f6bb5; color: #fff;}
 
 #footer
-{border-top: 1px solid #eee; width: 1000px; margin: auto; padding: 10px; color: #666; font-size: 1.1em; text-align: center}
+{border-top: 1px solid #ddd; padding: 10px; color: #666; font-size: 1.1em; text-align: center}
 
 /**
  * Classes
