Added Solidocs_Theme::body_class(). Added Solidocs_Session::destroy(). Added Solidcms_Controller_Admin::do_login() and do_logout(). Added Solidocs_Helper_Form::button(). Added Solidcms_View_Login. Added a login and logout route. Solidocs_Model_User::auth() now returns a boolean value.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -33,12 +33,18 @@ a:hover
 #sidebar
 {width: 169px; margin: 10px 20px 10px 0; padding: 10px 5px; float: left; border-right: 1px solid #aaa;}
 
+#sidebar b
+{padding: 0 5px;}
+
 #main
 {width: 800px; float: left; padding: 10px 0;}
 
 /**
  * Sidebar menu
  */
+#sidebar > ul
+{margin-bottom: 10px;}
+
 #sidebar ul li
 {border: 1px solid #bbb; margin-top: -1px; background: #ddd;}
 
