Added Solidcms_Controller_Admin_Package, Solidcms_View_Admin_Packages. Added Package.ini's to the Solidocs and the Solidcms packages, Package.ini is like a manifest file containing the package name, version, website and description. You can now install/uninstall and reinstall packages in the admin interface.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -80,3 +80,21 @@ p
 
 #sidebar ul li ul li a:hover
 {background: #cfecff;}
+
+/**
+ * Table list
+ */
+table.list
+{width: 100%; border: 1px solid #ccc; font-size: 1.1em;}
+
+table.list tr td
+{padding: 10px; border-bottom: 1px solid #ccc;}
+
+table.list tr:last-child td
+{border-bottom: 0;}
+
+table.list tr:nth-child(odd) td
+{background: #eee;}
+
+table.list tr td .block
+{padding: 2px;}
