The database loading part from Solidocs_Acl is now a part of Solidocs_Plugin_Db. Added listing of users in the admin interface. Minor improvements to Solidocs_Pager. Minor changes to Solidocs_Plugin_Debug and the Solidocs main class.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -90,8 +90,11 @@ p
 table.list
 {width: 100%; border: 1px solid #ccc; font-size: 1.1em;}
 
-table.list tr td
-{padding: 10px; border-bottom: 1px solid #ccc;}
+table.list tr td, table.list tr th
+{padding: 10px; border-bottom: 1px solid #ccc; text-align: left;}
+
+table.list tr th
+{background: #ddd;}
 
 table.list tr:last-child td
 {border-bottom: 0;}
