--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -12,8 +12,14 @@ body, html
 body
 {font: 62.5% Helvetica, Verdana, Arial, sans-serif; background: #eee;}
 
-h1 a
-{font: 1.6em Georgia, "Times New Roman", Times, serif; display: block; float: left; height: 50px; line-height: 50px; padding: 0 20px;}
+h1
+{font: 1.6em Georgia, "Times New Roman", Times, serif; display: block; float: left; padding: 0 20px;}
+
+h1, h1 a
+{height: 50px; line-height: 50px; text-decoration: none;}
+
+h1 a:hover
+{text-decoration: none;}
 
 h2
 {font-size: 1.6em; padding: 10px 0; border-bottom: 1px solid #aaa; margin-bottom: 10px; position: relative;}
@@ -29,6 +35,12 @@ a:hover
 
 p
 {font-size: 1.2em; line-height: 150%;}
+
+/**
+ * Common
+ */
+.label, .userbar
+{-moz-border-radius: 5px; -webkit-border-radius: 5px;}
 
 /**
  * Layout
@@ -67,7 +79,7 @@ p
 {-webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px;}
 
 #sidebar ul li a
-{display: block; padding: 7px; font: 1.2em Georgia; text-decoration: none; color: #222;}
+{display: block; padding: 7px; font: 1.3em Georgia; text-decoration: none; color: #222;}
 
 #sidebar ul li a:hover
 {text-decoration: underline;}
@@ -79,7 +91,7 @@ p
 {border: 0;}
 
 #sidebar ul li ul li a
-{padding: 4px 4px 4px 15px; margin-bottom: 2px; font-size: 1.1em; background: #eee; border: 1px solid #fff; border-left: 0; border-right: 0;}
+{padding: 4px 4px 4px 15px; margin-bottom: 2px; font-size: 1.1em; background: #eee; border: 1px solid #fff; border-left: 0; border-right: 0; font-size: 1.2em;}
 
 #sidebar ul li ul li a:hover
 {background: #cfecff;}
@@ -110,3 +122,9 @@ table.list tr td .block
  */
 .discrete
 {color: #777;}
+
+.label
+{padding: 4px; margin-left: 5px; background: #999; color: #ddd; text-decoration: none; border: 1px solid transparent;}
+
+.label:hover
+{text-decoration: none; border-color: #444;}
