--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -124,6 +124,25 @@ p
 {background: #d4ecff;}
 
 /**
+ * Form
+ */
+.form
+{padding: 0 5px 10px 5px;}
+
+.form label
+{font-size: 1.2em; font-weight: bold; display: block; padding-bottom: 5px; border-bottom: 1px solid #ccc; margin: 10px 0 5px 0;}
+
+.form label i
+{color: #777; font-style: italic;}
+
+.form input
+{font-size: 1.2em; padding: 5px; width: 300px; border: 1px solid #888;}
+
+.form input:focus
+{border-color: #444;}
+
+
+/**
  * Classes
  */
 .discrete
