Added Solidnode_View_Content_Page. Moved the old Solidcms_Plugin_Db methods to Solidyn_Plugin_Autoload. Completely removed the Solidcms package. Library configuration does not need the package prefix now, [Solidocs_Db] section is now [Db] etc. Solidocs_Load::$searchable is now $packages. Added autoloading for the bundled packages to Application.ini. Solidocs_Application can now load plugins, fixed a minor bug.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -37,7 +37,10 @@ a:hover
 {width: 1000px;}
 
 #sidebar
-{width: 180px; height: 100px; background: #fff; margin: 10px; float: left;}
+{width: 180px; background: #fff; margin: 10px; float: left;}
+
+#sidebar ul li a
+{display: block; padding: 5px; font-size: 1.1em;}
 
 #content
 {width: 800px; background: #fff; margin: 10px 0 10px 0; float: left;}
