Added Solidnde_Form_Edit, Solidnode_View_Admin_Content_Create and Solidnode_View_Admin_Content_List. Added Solidocs_Helper_Form::hidden(). Solidocs_Navigation now sets active uri from Solidocs_Router::$uri (which is a new property). Fixed a bug in Solidocs_Plugin_Debug. Fixed a bug in Solidocs_Input::has_request(). You can now edit page nodes.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -52,7 +52,7 @@ a:hover
 {border-top: 1px solid #ccc; font-size: 1.1em;}
 
 #sidebar ul li > ul li a
-{padding-left: 25px;}
+{padding: 0 5px 5px 25px;}
 
 #sidebar > ul > li:first-child > a
 {border: 0;}
@@ -90,8 +90,8 @@ a:hover
 .form input
 {margin-right: 10px;}
 
-.form.horizontal
-{}
+.form.vertical label
+{display: block;}
 
 /**
  * Classes
