--- a/System/Packages/CLEditor/Media/jquery.cleditor.css
+++ b/System/Packages/CLEditor/Media/jquery.cleditor.css
@@ -1,10 +1,11 @@
-.cleditorMain {border:1px solid #999999; padding:0 1px 1px; background-color:white}
+.cleditorMain {border:1px solid #999; padding:0 1px 1px; background-color:white}
 .cleditorMain iframe {border:none; margin:0; padding:0}
 .cleditorMain textarea {border:none; margin:0; padding:0; overflow-y:scroll; font:10pt Arial,Verdana; resize:none; outline:none /* webkit grip focus */}
+.cleditorToolbar {background: url('images/toolbar.gif') repeat}
 .cleditorGroup {float:left; height:26px}
-.cleditorButton {float:left; width:24px; height:24px; margin:1px 0 1px 0}
-.cleditorDivider {float:left; width:1px; height:23px; margin:1px 0 1px 0; background:#ccc}
-.cleditorPopup {border:solid 1px #999999; background-color:white; position:absolute; font:10pt Arial,Verdana; cursor:default; z-index:0}
+.cleditorButton {float:left; width:24px; height:24px; margin:1px 0 1px 0; background: url('images/buttons.gif')}
+.cleditorDivider {float:left; width:1px; height:23px; margin:1px 0 1px 0; background:#CCC}
+.cleditorPopup {border:solid 1px #999; background-color:white; position:absolute; font:10pt Arial,Verdana; cursor:default; z-index:0}
 .cleditorList div {padding:2px 4px 2px 4px}
 .cleditorList p,
 .cleditorList h1,
