--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -94,6 +94,27 @@ a:hover
 {display: block;}
 
 /**
+ * Message
+ */
+.message
+{padding: 10px; margin: 10px; border: 1px solid; font-size: 10px;}
+
+.message span
+{font-size: 1.2em; font-weight: bold;}
+
+.message p
+{font-size: 1.1em; padding-top: 5px;}
+
+.message.success
+{border-color: #fffb1b; background: #feffde;}
+
+.message.error
+{border-color: #ea110e; background: #ffe2e5;}
+
+.message.info
+{border-color: #34a1ff; background: #dbe8ff;}
+
+/**
  * Classes
  */
 .discrete
