Minor change to Solidocs_Plugin_Debug. Added Admin_View_Admin_Navigation_EditPart. There's no limit of how nested navigations you can create new.

--- a/System/Packages/Admin/Media/navigation.css
+++ b/System/Packages/Admin/Media/navigation.css
@@ -2,10 +2,10 @@
 {padding: 10px;}
 
 #navigation_list li
-{display: block; padding: 10px; margin-bottom: 1px; border: 1px solid #ccc; background: #eee;}
+{display: block; padding: 10px; border: 1px solid #ccc; background: #eee; border-bottom: 0;}
+
+#navigation_list li:last-child
+{border-bottom: 1px solid #ccc;}
 
 #navigation_list li ul
-{padding-top: 10px;}
-
-#navigation_list li ul li
-{background: #fff;}
+{margin-top: 10px; border: 1px solid #fff;}
