--- a/System/Media/Theme/Default/style.css
+++ b/System/Media/Theme/Default/style.css
@@ -39,11 +39,14 @@ a:hover
 #wrapper
 {background: url(images/wrapper_bg.png) top left repeat-x; padding-top: 40px;}
 
-#content
+#main
 {width: 958px; padding: 10px; margin: auto; background: #fff; border: 1px solid #003260;}
 
-#content.small
-{width: 400px;}
+#main.column #left_sidebar
+{width: 200px; float: left; margin-right: 10px; border-right: 1px solid #ccc; padding-right: 10px;}
+
+#main.column #content
+{width: 737px; float: left;}
 
 #footer
 {padding: 10px 10px 0 10px; color: #fff; text-shadow: 1px 1px 2px #444; font-size: 1.1em; text-align: center;}
