Improved Solidocs_Db::_comparison_val(), it now supports the < and > comparison operators. Solidocs_Load::search() now throws an error if a specific package was specified and the package isn't allowed to be loaded.

--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -18,6 +18,9 @@ h1 a
 h2
 {font-size: 1.4em; padding: 10px; border-bottom: 1px solid #eee;}
 
+h3
+{font-size: 1.3em; padding: 10px;}
+
 p
 {padding: 10px;}
 
