--- a/System/Media/Theme/Admin/style.css
+++ b/System/Media/Theme/Admin/style.css
@@ -69,14 +69,20 @@ a:hover
 .list
 {width: 100%;}
 
-.list tbody tr td, .list thead tr th
+.list tbody tr td, .list thead tr th, .list tfoot tr td
 {padding: 10px; border: 1px solid #999; border-right-color: #eee;}
 
-.list tbody tr td:last-child, .list thead tr th:last-child
+.list tbody tr td:last-child, .list thead tr th:last-child, .list tfoot tr td:last-child
 {border-right-color: #999;}
 
 .list thead tr th
 {background: #eee; border-right-color: #ccc;}
+
+.list td.focus
+{background: #fffbc6;}
+
+.list tfoot tr td
+{background: #999; color: #fff;}
 
 /**
  * Form
